# fastapi-kit

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  database.py  dependencies.py  main.py
app/api/v1/: auth.py  router.py  users.py
app/core/: exceptions.py  security.py
app/models/: __init__.py  user.py
app/schemas/: common.py  user.py
app/services/: user.py
scripts/: test_db.py
tests/: conftest.py  test_config.py  test_users.py
